# TipsyTavern

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: character.rs  commands.rs  lib.rs  main.rs  state.rs  storage.rs
src-tauri/src/ai/: context.rs  error.rs  event.rs  keychain.rs  mod.rs  model.rs  provider.rs  sse.rs  worldbook.rs
src-tauri/src/ai/providers/: anthropic_messages.rs  google_generative_ai.rs  mod.rs  openai_completions.rs
src/components/: ActivityBar.tsx  ThemeProvider.tsx  TitleBar.tsx
src/features/characters/: CharacterList.tsx  CharacterWorkspace.tsx  WorldBookComboBox.tsx
src/features/chat/: ChatList.tsx  ChatWorkspace.tsx
src/features/inspector/: InspectorList.tsx  InspectorWorkspace.tsx
src/features/personas/: PersonaList.tsx  PersonaWorkspace.tsx
src/features/settings/: SettingsList.tsx  SettingsWorkspace.tsx
src/features/worldbook/: WorldBookList.tsx  WorldBookWorkspace.tsx
src/lib/: active-stream.ts  characters.ts  chats.ts  generate.ts  inspector.ts  personas.ts  providers.ts  settings.ts  worldbooks.ts
